--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular-datatables": "^10.0.0",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
+    "ngx-bootstrap": "^6.2.0",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
@@ -37,6 +38,7 @@
     "@angular/language-service": "~9.0.2",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.5.4",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
