--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
     "@types/bcrypt": "^5.0.0",
     "angular-datatables": "^10.0.0",
     "bcrypt": "^5.0.1",
+    "express": "^4.17.1",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "ngx-bootstrap": "^6.2.0",
     "ngx-pagination": "^5.0.0",
     "node-gyp": "^8.1.0",
+    "path": "^0.12.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "typescript": "~3.7.5",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -45,6 +48,7 @@
     "@types/jquery": "^3.5.4",
     "@types/node": "^12.20.15",
     "codelyzer": "^5.1.2",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.3.0",
@@ -56,5 +60,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "~3.7.5"
+  },
+  "engines": {
+    "node": "14.15.0",
+    "npm": "6.14.8"
   }
 }
